AWS VPC Architecture with Terraform/eip.tf
resource "aws_eip" "eip" {
  depends_on = [aws_internet_gateway.igw]
  tags = {
    Name  = "eipTF"
  }

}
